# Code_References

./: README.md
CLI_Chess/: CMakeLists.txt
CLI_Chess/src/bsp1/: main.cpp
CLI_Chess/src/bsp1/board/: chessboard.cpp  chessboard.h
CLI_Chess/src/bsp1/board/coordinate/: coordinate.h
CLI_Chess/src/bsp1/figures/bishop/: bishop.cpp  bishop.h
CLI_Chess/src/bsp1/figures/chessman/: chessman.cpp  chessman.h
CLI_Chess/src/bsp1/figures/king/: king.cpp  king.h
CLI_Chess/src/bsp1/figures/knight/: knight.cpp  knight.h
CLI_Chess/src/bsp1/figures/pawn/: pawn.cpp  pawn.h
CLI_Chess/src/bsp1/figures/queen/: queen.cpp  queen.h
CLI_Chess/src/bsp1/figures/rook/: rook.cpp  rook.h
GLFW_Tetris/: CMakeLists.txt
GLFW_Tetris/src/tetris/src/: board.c  board.h  primitives.c  primitives.h  tetrimino.c  tetrimino.h  tetris.c  timer.c  timer.h  window.c  window.h
SFML_Breakout/: CMakeLists.txt
SFML_Breakout/src/breakout/resources/: gameconfig.cfg  gameconfig.cfg.bak
SFML_Breakout/src/breakout/src/: main.cpp
SFML_Breakout/src/breakout/src/classes/ball/: ball.cpp  ball.h
SFML_Breakout/src/breakout/src/classes/breakout_game/: breakout_game.cpp  breakout_game.h
SFML_Breakout/src/breakout/src/classes/brick/: brick.cpp  brick.h
SFML_Breakout/src/breakout/src/classes/config/: config.cpp  config.h
SFML_Breakout/src/breakout/src/classes/drawable_object/: drawable_object.h
SFML_Breakout/src/breakout/src/classes/game_window/: game_window.cpp  game_window.h
SFML_Breakout/src/breakout/src/classes/paddle/: paddle.cpp  paddle.h
SFML_Breakout/src/intro/src/: main.cpp
(+4 files in other folders)
